--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -3,9 +3,9 @@ spring:
         type: com.alibaba.druid.pool.DruidDataSource
         druid:
             driver-class-name: com.mysql.cj.jdbc.Driver
-            url: jdbc:mysql://localhost:3306/renren_fast?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
-            username: renren
-            password: 123456
+            url: jdbc:mysql://140.143.241.93:3306/renren_fast?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
+            username: 'root'
+            password: '000000'
             initial-size: 10
             max-active: 100
             min-idle: 10
@@ -32,6 +32,8 @@ spring:
                 wall:
                     config:
                         multi-statement-allow: true
+#server:
+#    port: 1215
 
 
 ##多数据源的配置
