--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -74,3 +74,7 @@ renren:
     # token有效时长，7天，单位秒
     expire: 604800
     header: token
+
+zwfw:
+  midurl:
+    url: http://api.heclouds.com/devices/703784428
